# romlibrary

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  romlibrary.h
cmake/: FindLEXBOR.cmake  FindROMLIBRARY.cmake
src/: hoster.c  results.c  systems.c
src/helper/: curlling.c  curlling.h  domparsing.c  domparsing.h  http.c  linkedlist.c  md5.h  regex.c  regex.h  utils.c  utils.h  version.c
src/hoster/: hosterhandler.c  hosterhandler.h  results.c  results.h  urlhandling.c  urlhandling.h
src/hoster/freeroms/: freeroms.c  freeroms.h  mapping.c  mapping.h
src/hoster/romhustler/: mapping.c  mapping.h  romhustler.c  romhustler.h
src/hoster/romsdownload/: icon.h  mapping.c  mapping.h  romsdownload.c  romsdownload.h
src/hoster/romsemulator/: icon.h  mapping.c  mapping.h  romsemulator.c  romsemulator.h
src/hoster/romsmania/: mapping.c  mapping.h  romsmania.c  romsmania.h
src/hoster/template/: template.c
src/hoster/wowroms/: mapping.c  mapping.h  wowroms.c  wowroms.h
src/systems/: systems.h
test/: download.c  download.h  enginecache.c  enginecache.h  hoster.c  hoster.h  hoster_freeroms.c  hoster_freeroms.h  hoster_romhustler.c  hoster_romhustler.h  hoster_romsdownload.c  hoster_romsdownload.h  hoster_romsemulator.c  hoster_romsemulator.h  hoster_romsmania.c  hoster_romsmania.h  hoster_wowroms.c  hoster_wowroms.h  systems.c  systems.h  test.c  test.cmake  test.h
